--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <section id="contact">
   <h2>Contact Us</h2>
-  <p>Email: <a href="mailto:info@paxtecum.co.za">info@paxtecum.co.za</a></p>
-  <p>Phone: <a href="tel:+27XXXXXXXXX">+27 XX XXX XXXX</a></p>
+  <p>Email: <a href="mailto:paxtexumcommunications@gmail.com">paxtecumcommunications@gmail.com</a></p>
+  <p>Phone: <a href="tel:+27836524378">+27 83 652 4378</a></p>
   <p>
     <a class="btn" href="https://wa.me/27XXXXXXXXX">WhatsApp Us</a>
   </p>
