--- a/index.html
+++ b/index.html
@@ -5,46 +5,75 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pax Tecum Communication</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
+<nav>
+  <h1>Pax Tecum</h1>
+  <ul>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#store">Store</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
 <header>
-  <h1>Pax Tecum Communication</h1>
-  <p>Technology Solutions. Simplified.</p>
+  <h2>Technology Solutions. Simplified.</h2>
+  <p>IT Services • Automation • Hardware • Marketing • Online Store</p>
   <a class="btn" href="#contact">Get a Quote</a>
 </header>
 
-<section>
-  <h2>About Us</h2>
-  <p>
-    Pax Tecum Communication provides professional IT services, home automation,
-    hardware repairs, digital marketing, and nationwide IT product distribution.
-  </p>
+<section id="services">
+  <h3>Our Services</h3>
+  <div class="grid">
+    <div class="card">Outsourced IT & Sub-Contracting</div>
+    <div class="card">Home Automation & CCTV</div>
+    <div class="card">Hardware Repairs & PC Builds</div>
+    <div class="card">Marketing & Design</div>
+    <div class="card">Online Store & Distribution</div>
+  </div>
 </section>
 
-<section>
-  <h2>Our Services</h2>
-  <ul>
-    <li>Outsourced IT & Sub-Contracting</li>
-    <li>Home Automation & CCTV</li>
-    <li>Hardware Repairs & Custom PC Builds</li>
-    <li>Marketing & Design Services</li>
-    <li>Online Store & National Distribution</li>
-  </ul>
+<section id="store">
+  <h3>Featured Products</h3>
+  <div class="grid">
+    <div class="card">
+      <h4>4MP CCTV Camera</h4>
+      <p>R1,399</p>
+    </div>
+    <div class="card">
+      <h4>Gigabit WiFi Router</h4>
+      <p>R1,249</p>
+    </div>
+    <div class="card">
+      <h4>Office PC Build</h4>
+      <p>From R7,499</p>
+    </div>
+  </div>
 </section>
 
 <section id="contact">
-  <h2>Contact Us</h2>
-  <p>Email: <a href="mailto:paxtexumcommunications@gmail.com">paxtecumcommunications@gmail.com</a></p>
-  <p>Phone: <a href="tel:+27836524378">+27 83 652 4378</a></p>
+  <h3>Contact Us</h3>
+
+  <form action="https://formspree.io/f/xyzzabcd" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="How can we help?" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+
   <p>
-    <a class="btn" href="https://wa.me/27XXXXXXXXX">WhatsApp Us</a>
+    📧 paxtecum@gmail.com<br>
+    📞 +27 836524379<br>
+    💬 <a href="https://wa.me/27615663196">WhatsApp Us</a>
   </p>
 </section>
 
 <footer>
-  <p>© 2026 Pax Tecum Communication</p>
+  © 2026 Pax Tecum Communication
 </footer>
 
 </body>
 </html>
+
