--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section id="contact">
   <h3>Contact Us</h3>
 
-  <form action="https://formspree.io/f/xyzzabcd" method="POST">
+  <form action="https://formspree.io/f/mvzqyqqa" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
     <textarea name="message" placeholder="How can we help?" required></textarea>
